Fixed small css bug on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -158,3 +158,7 @@
         max-width: 600px;
     }
 }
+
+.card-body {
+    overflow: auto;
+}
